# RAG_PP

./: .gitignore  Instraction.md  README.md  README_2.md  app.py  cli.py  comands.txt  pyproject.toml  requirements.txt  result.json  test.py  test_2.py
core/: extractor.py  pipeline.py  schemas.py  table_html_to_grid.py  table_parser.py  yolo_layout.py  yolo_tables.py
output/Screenshot_1/: Screenshot_1.json  Screenshot_1_raw.json  Screenshot_1_tables.json
postprocess/: compare_ocr_metrics.py  export_raw_json.py  extract_transcriptions.py  lexicon.py  llm_correct.py  llm_correct_json.py  llm_postprocess.py  llm_structure.py  llm_test.py  normalize_text.py  ocr.py  run_all.py  run_postprocess.py  validators.py  yolo_tables.py
schema/: structured_document.schema.json
