[project]
name = "rag-pp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "acres==0.5.0",
    "aiofiles==24.1.0",
    "aistudio-sdk==0.3.8",
    "albucore==0.0.24",
    "albumentations==2.0.8",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "astor==0.8.1",
    "bce-python-sdk==0.9.55",
    "beautifulsoup4==4.14.3",
    "brotli==1.2.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "ci-info==0.3.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "configobj==5.0.9",
    "configparser==7.2.0",
    "contourpy==1.3.3",
    "crc32c==2.8",
    "cryptography==46.0.3",
    "cycler==0.12.1",
    "Cython==3.1.6",
    "decorator==5.2.1",
    "dill==0.4.0",
    "etelemetry==0.3.1",
    "exceptiongroup==1.3.0",
    "fastapi==0.127.0",
    "ffmpy==1.0.0",
    "filelock==3.20.0",
    "fonttools==4.61.1",
    "fsspec==2025.12.0",
    "future==1.0.0",
    "ghostscript==0.8.1",
    "gpt4all==2.8.2",
    "gradio==6.2.0",
    "gradio_client==2.0.2",
    "groovy==0.1.2",
    "gs==1.1.1",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httpx==0.28.1",
    "huggingface_hub==1.2.3",
    "idna==3.11",
    "imageio==2.37.0",
    "imagesize==1.4.1",
    "importlib_resources==6.5.2",
    "isodate==0.7.2",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "lazy_loader==0.4",
    "lmdb==1.7.5",
    "looseversion==1.3.0",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "modelscope==1.33.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "nibabel==5.3.2",
    "nipype==1.10.0",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python-headless==4.12.0.88",
    "opt-einsum==3.3.0",
    "orjson==3.11.5",
    "packaging==25.0",
    "paddleocr==3.3.2",
    "paddlepaddle==3.2.2",
    "paddlex==3.3.11",
    "pandas==2.3.3",
    "pathlib==1.0.1",
    "pillow==12.0.0",
    "polars==1.36.1",
    "polars-runtime-32==1.36.1",
    "prettytable==3.17.0",
    "protobuf==3.20.2",
    "prov==2.1.1",
    "psutil==7.1.3",
    "puremagic==1.30",
    "py-cpuinfo==9.0.0",
    "pyclipper==1.3.0.post6",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "pydot==4.0.1",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "PyMuPDF==1.26.5",
    "pyparsing==3.2.5",
    "pypdfium2==5.2.0",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.18",
    "PyQt5_sip==12.17.2",
    "python-bidi==0.6.7",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.21",
    "pytz==2025.2",
    "pyxnat==1.6.3",
    "PyYAML==6.0.2",
    "RapidFuzz==3.14.2",
    "rdflib==7.4.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "ruamel.yaml==0.18.16",
    "ruamel.yaml.clib==0.2.15",
    "safehttpx==0.1.7",
    "safetensors==0.7.0",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "semantic-version==2.10.0",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "simplejson==3.20.2",
    "simsimd==6.5.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "starlette==0.50.0",
    "stringzilla==4.2.3",
    "sympy==1.14.0",
    "tifffile==2025.5.10",
    "tomlkit==0.13.3",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "traits==7.0.2",
    "triton==3.5.1",
    "tweak==1.0.4",
    "typer==0.20.1",
    "typer-slim==0.20.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "ujson==5.11.0",
    "ultralytics==8.3.237",
    "ultralytics-thop==2.0.18",
    "urllib3==2.5.0",
    "uv==0.9.17",
    "uvicorn==0.40.0",
    "wcwidth==0.2.14",
]
